Implement pingserver logic and wire up server
* Protobuf definition update to remove timestampe and simplify
* Business logic for server contained in pkg/api/server.go
* Pingserver executable contained in cmd/pingserver/main.go
