# pkg/pingv1/ping_api.pb.go
@@ -7,7 +7,6 @@ import (
 	context "context"
 	fmt "fmt"
 	proto "github.com/golang/protobuf/proto"
-	timestamp "github.com/golang/protobuf/ptypes/timestamp"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
@@ -147,14 +146,12 @@ func (m *PingStreamRequest) GetMessage() string {
 	return ""
 }
 
-// PingStreamResponse contains information about the processing time of the
-// ping stream.
+// PingStreamResponse contains information about the request processed.
 type PingStreamResponse struct {
-	Count                int32                `protobuf:"varint,1,opt,name=count,proto3" json:"count,omitempty"`
-	Duration             *timestamp.Timestamp `protobuf:"bytes,2,opt,name=duration,proto3" json:"duration,omitempty"`
-	XXX_NoUnkeyedLiteral struct{}             `json:"-"`
-	XXX_unrecognized     []byte               `json:"-"`
-	XXX_sizecache        int32                `json:"-"`
+	Count                int32    `protobuf:"varint,1,opt,name=count,proto3" json:"count,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
 }
 
 func (m *PingStreamResponse) Reset()         { *m = PingStreamResponse{} }
@@ -187,13 +184,6 @@ func (m *PingStreamResponse) GetCount() int32 {
 		return m.Count
 	}
 	return 0
-}
-
-func (m *PingStreamResponse) GetDuration() *timestamp.Timestamp {
-	if m != nil {
-		return m.Duration
-	}
-	return nil
 }
 
 // PongStreamRequest contains a count telling the server how many responses
@@ -405,35 +395,32 @@ func init() {
 func init() { proto.RegisterFile("ping_api.proto", fileDescriptor_31d8fe8f48d51168) }
 
 var fileDescriptor_31d8fe8f48d51168 = []byte{
-	// 437 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x92, 0x4b, 0x6e, 0xd4, 0x40,
-	0x10, 0x86, 0xd5, 0x86, 0x3c, 0x28, 0xc3, 0x24, 0x69, 0xb2, 0x30, 0x56, 0x48, 0x90, 0x57, 0x16,
-	0x8b, 0x76, 0x1c, 0x24, 0x90, 0x78, 0x49, 0x84, 0x15, 0x0b, 0x24, 0xcb, 0xa0, 0x2c, 0x10, 0x12,
-	0xf2, 0x64, 0x1a, 0xab, 0x05, 0xee, 0x76, 0xdc, 0x6d, 0x1f, 0x80, 0x2b, 0x70, 0x06, 0x36, 0x1c,
-	0x85, 0x2d, 0x57, 0xe0, 0x20, 0xa8, 0x1f, 0x66, 0x3c, 0xcc, 0x58, 0x93, 0xd9, 0xb9, 0x5c, 0xf5,
-	0xd7, 0x57, 0x7f, 0x55, 0xc3, 0xa4, 0x66, 0xbc, 0xfc, 0x54, 0xd4, 0x8c, 0xd4, 0x8d, 0x50, 0x02,
-	0xfb, 0x3a, 0xae, 0x05, 0x2f, 0x49, 0x97, 0x86, 0x47, 0xa5, 0x10, 0xe5, 0x57, 0x9a, 0x14, 0x35,
-	0x4b, 0x0a, 0xce, 0x85, 0x2a, 0x14, 0x13, 0x5c, 0xda, 0xd2, 0xf0, 0xc4, 0x65, 0x4d, 0x34, 0x6d,
-	0x3f, 0x27, 0x8a, 0x55, 0x54, 0xaa, 0xa2, 0xaa, 0x6d, 0x41, 0x74, 0x07, 0xfc, 0x8c, 0xf1, 0x32,
-	0xa7, 0x57, 0x2d, 0x95, 0x2a, 0x8a, 0xe1, 0xb6, 0x0d, 0x65, 0x2d, 0xb8, 0xa4, 0x38, 0x80, 0x9d,
-	0x8a, 0x4a, 0x59, 0x94, 0x34, 0x40, 0x0f, 0x50, 0x7c, 0x2b, 0xef, 0xc3, 0xe8, 0x05, 0x1c, 0xe8,
-	0xca, 0x77, 0xaa, 0xa1, 0x45, 0xe5, 0xe4, 0x78, 0x02, 0x1e, 0x9b, 0x99, 0xca, 0xad, 0xdc, 0x63,
-	0xb3, 0xa1, 0xdc, 0x5b, 0x94, 0x4f, 0x01, 0x0f, 0xe5, 0x0e, 0x77, 0x08, 0x5b, 0x97, 0xa2, 0xe5,
-	0xca, 0xb5, 0xb0, 0x01, 0x7e, 0x0c, 0xbb, 0xb3, 0xb6, 0x31, 0xbe, 0x4c, 0x1b, 0xff, 0x2c, 0x24,
-	0xd6, 0x17, 0xe9, 0x7d, 0x91, 0xf7, 0xbd, 0xaf, 0xfc, 0x5f, 0x6d, 0xf4, 0x1a, 0x0e, 0x32, 0xf1,
-	0xff, 0x88, 0xab, 0x11, 0xe3, 0x83, 0xbe, 0x04, 0x3c, 0x6c, 0xe2, 0x06, 0xbd, 0xbe, 0xd1, 0x67,
-	0xb0, 0xa7, 0x8d, 0xea, 0x1e, 0x9b, 0x6f, 0xe9, 0x39, 0xec, 0xcf, 0xc5, 0x9b, 0xa2, 0xcf, 0x7e,
-	0xdc, 0x80, 0x1d, 0x2d, 0x7f, 0x95, 0xbd, 0xc1, 0x6f, 0xe1, 0xa6, 0xfe, 0xc4, 0x01, 0x19, 0x3c,
-	0x1e, 0x32, 0x38, 0x7d, 0x78, 0x6f, 0x45, 0xc6, 0x22, 0xa3, 0xfd, 0x6f, 0xbf, 0xff, 0x7c, 0xf7,
-	0x00, 0xef, 0x26, 0x5d, 0x9a, 0xe8, 0x2a, 0xfc, 0x05, 0x60, 0x7e, 0x3e, 0x7c, 0xbc, 0x24, 0x5d,
-	0xd8, 0x79, 0x78, 0x32, 0x9a, 0x77, 0x80, 0xd0, 0x00, 0x0e, 0xa3, 0xbd, 0x1e, 0x90, 0x48, 0x53,
-	0xf0, 0x14, 0x3d, 0x8c, 0x91, 0x81, 0x89, 0x31, 0x98, 0x58, 0x03, 0x13, 0x6b, 0x60, 0x62, 0x08,
-	0x3b, 0x45, 0xf8, 0x0a, 0x26, 0xfd, 0xca, 0x1d, 0xf0, 0x68, 0x69, 0xfa, 0xc1, 0x31, 0xc3, 0xfb,
-	0x23, 0x59, 0x07, 0x3b, 0x36, 0xb0, 0x20, 0xba, 0xdb, 0x3b, 0x5b, 0x04, 0xc6, 0xe8, 0x14, 0x9d,
-	0x3f, 0x01, 0xff, 0x52, 0x54, 0xa6, 0x0f, 0xe9, 0xd2, 0x73, 0xbb, 0x59, 0xda, 0x74, 0xb4, 0xc9,
-	0xd0, 0x87, 0x6d, 0xfd, 0xbb, 0x4b, 0x7f, 0x7a, 0xe6, 0x94, 0xe4, 0x22, 0xfd, 0x65, 0xbf, 0x3e,
-	0x5e, 0xa4, 0xd3, 0x6d, 0xf3, 0xfc, 0x1f, 0xfd, 0x0d, 0x00, 0x00, 0xff, 0xff, 0x61, 0xd7, 0x14,
-	0xd0, 0x21, 0x04, 0x00, 0x00,
+	// 396 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x93, 0x4d, 0x4e, 0xe3, 0x40,
+	0x10, 0x85, 0xd5, 0x9e, 0x49, 0x32, 0x53, 0x99, 0xc9, 0x4f, 0x4f, 0x16, 0x1e, 0x2b, 0x93, 0x41,
+	0x5e, 0x59, 0x59, 0xd8, 0x31, 0x2c, 0x90, 0xf8, 0x93, 0x08, 0x2b, 0x16, 0x48, 0x56, 0x90, 0xb2,
+	0x40, 0x48, 0xc8, 0x24, 0x2d, 0xcb, 0x82, 0x74, 0x39, 0xb6, 0xe3, 0x03, 0x70, 0x05, 0xce, 0xc0,
+	0x86, 0xa3, 0xb0, 0xe5, 0x0a, 0x1c, 0x04, 0x75, 0xdb, 0x56, 0x1c, 0x92, 0x10, 0xb2, 0xeb, 0x72,
+	0xbf, 0x57, 0x5f, 0x75, 0x3d, 0x19, 0x6a, 0x81, 0xcf, 0xbd, 0x1b, 0x37, 0xf0, 0xcd, 0x20, 0xc4,
+	0x18, 0x69, 0x55, 0xd4, 0x01, 0x72, 0xcf, 0x4c, 0x6c, 0xad, 0xed, 0x21, 0x7a, 0xf7, 0xcc, 0x72,
+	0x03, 0xdf, 0x72, 0x39, 0xc7, 0xd8, 0x8d, 0x7d, 0xe4, 0x51, 0x2a, 0xd5, 0x7f, 0x43, 0xd5, 0xf1,
+	0xb9, 0x37, 0x60, 0xd3, 0x19, 0x8b, 0x62, 0xdd, 0x80, 0x5f, 0x69, 0x19, 0x05, 0xc8, 0x23, 0x46,
+	0x55, 0xa8, 0x4c, 0x58, 0x14, 0xb9, 0x1e, 0x53, 0xc9, 0x0e, 0x31, 0x7e, 0x0e, 0xf2, 0x52, 0x3f,
+	0x86, 0xa6, 0x50, 0x5e, 0xc6, 0x21, 0x73, 0x27, 0x99, 0x9d, 0xd6, 0x40, 0xf1, 0xc7, 0x52, 0x59,
+	0x1a, 0x28, 0xfe, 0xb8, 0x68, 0x57, 0x16, 0xed, 0x5d, 0xa0, 0x45, 0x7b, 0x86, 0x6b, 0x41, 0x69,
+	0x84, 0x33, 0x1e, 0x67, 0x2d, 0xd2, 0x42, 0x3f, 0x83, 0xa6, 0x83, 0x1f, 0x51, 0x2b, 0xa5, 0x9f,
+	0x00, 0x4f, 0x80, 0x16, 0x9b, 0x64, 0xc0, 0xaf, 0x0f, 0x7c, 0x08, 0x75, 0x31, 0xb0, 0xe8, 0xb1,
+	0xfd, 0x6b, 0x8f, 0xa0, 0x31, 0x37, 0x6f, 0x8b, 0xde, 0x7d, 0xfa, 0x06, 0x15, 0x61, 0x3f, 0x75,
+	0xce, 0xe9, 0x05, 0x7c, 0x17, 0x47, 0xaa, 0x9a, 0x85, 0x8c, 0xcd, 0x42, 0x84, 0xda, 0xdf, 0x15,
+	0x37, 0x29, 0x52, 0x6f, 0x3c, 0xbc, 0xbe, 0x3d, 0x2a, 0x40, 0x7f, 0x58, 0x89, 0x6d, 0x09, 0x15,
+	0xbd, 0x03, 0x98, 0xc7, 0x40, 0x3b, 0x4b, 0xd6, 0x85, 0x9d, 0x6b, 0xff, 0xd7, 0xde, 0x67, 0x00,
+	0x4d, 0x02, 0x5a, 0x7a, 0x3d, 0x07, 0x58, 0x91, 0x14, 0x1c, 0x90, 0xae, 0x41, 0x24, 0x0c, 0xd7,
+	0xc1, 0x70, 0x03, 0x0c, 0x37, 0xc0, 0xb0, 0x08, 0xeb, 0x11, 0x3a, 0x85, 0x5a, 0xbe, 0xf2, 0x0c,
+	0xd8, 0x5e, 0x9a, 0xbe, 0x10, 0xa6, 0xf6, 0x6f, 0xcd, 0x6d, 0x06, 0xeb, 0x48, 0x98, 0xaa, 0xff,
+	0xc9, 0x5f, 0xb6, 0x08, 0x34, 0x48, 0x8f, 0xf4, 0xf7, 0xa1, 0x3a, 0xc2, 0x89, 0xec, 0x63, 0x26,
+	0x76, 0x3f, 0xdd, 0x2c, 0x0b, 0x13, 0x16, 0x3a, 0xe4, 0xaa, 0x2c, 0x3e, 0x27, 0xf6, 0xb3, 0x22,
+	0xa3, 0x34, 0x87, 0xf6, 0x4b, 0x7a, 0xba, 0x1e, 0xda, 0xb7, 0x65, 0xf9, 0x2f, 0xee, 0xbd, 0x07,
+	0x00, 0x00, 0xff, 0xff, 0x05, 0x14, 0x9f, 0xda, 0xc8, 0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -451,8 +438,7 @@ type PingAPIClient interface {
 	// Ping is a simple request which returns a simple response
 	Ping(ctx context.Context, in *PingRequest, opts ...grpc.CallOption) (*PingResponse, error)
 	// PingStream accepts a stream of requests, and will return a response
-	// containing a count of the requests processed and the time it took to
-	// process.
+	// containing a count of the requests processed.
 	PingStream(ctx context.Context, opts ...grpc.CallOption) (PingAPI_PingStreamClient, error)
 	// PongStream accepts a request stating how many requests to stream back.
 	// It will response with a stream until the count is reached and close the
@@ -582,8 +568,7 @@ type PingAPIServer interface {
 	// Ping is a simple request which returns a simple response
 	Ping(context.Context, *PingRequest) (*PingResponse, error)
 	// PingStream accepts a stream of requests, and will return a response
-	// containing a count of the requests processed and the time it took to
-	// process.
+	// containing a count of the requests processed.
 	PingStream(PingAPI_PingStreamServer) error
 	// PongStream accepts a request stating how many requests to stream back.
 	// It will response with a stream until the count is reached and close the
